# FlowGrid

./: .gitignore  CONTRIBUTING.md  FLG_AI_WHITEBOARD_DRY_RUN_REPORT.md  FLG_DECISION_EXTRACTION_QA_REPORT.md  FLG_DECISION_LEDGER_RECONCILIATION_REPORT.md  FLG_DECISION_LOG_GENERATION_AUDIT.md  FLG_MERGE_RISK_AUDIT_REPORT.md  FLG_RC0_CLI_ACCEPTANCE_REPORT.md  FLG_RELEASE_ENGINEERING_CLEANUP_REPORT.md  FLG_V0_1_0_STABILIZATION_REPORT.md  FLG_V0_1_1_MERGE_REPORT.md  FLG_V0_1_2_HANDOFF_REPORT.md  FLG_V0_1_5_LEGACY_AUDIT_REPORT.md  FLG_V0_1_5_RC0_ACCEPTANCE_SUMMARY.md  IMPLEMENTATION_REPORT.md  ITERATION_LOG.md  README.md  README.zh-CN.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.github/workflows/: ci.yml
docs/: codex-host-mvp-validation.md  first-run-in-hosts.md  host-usage.md  protocol.md
docs/devlog/: 001-candidate-is-not-a-decision.md  002-review-before-context.md  003-ledger-is-truth-index-is-cache.md  README.md
docs/governance/: OPEN_SOURCE_AUDIT.md  (+2 more)
evals/: README.md  continuation_stability.py  english_native_check.py  prepare_context_eval.py  recall-bench.py  runbook.md
examples/: dogfood_risk_recall_transcript.md
outputs/: english-native-eval.json  speedup-proof-context.json  speedup-proof-report.md  speedup-proof-results.json
scripts/: smoke_test.py
tests/: conftest.py  test_audit.py  test_capture.py  test_closeout.py  test_context.py  test_continuation_stability.py  test_frame.py  test_handoff.py  test_init.py  test_integrity.py  test_merge.py  test_onboard.py  test_patch_cmd.py  test_review.py  test_session.py  test_state.py  test_status.py
(+135 files in other folders)
