[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowgrid"
version = "0.2.2"
description = "A local project workflow tool for non-coding knowledge work."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
flg = "flg.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
